[gd_scene load_steps=2 format=3 uid="uid://cku523bar8r1i"]

[ext_resource type="Script" path="res://Prog115b.gd" id="1_6gup2"]

[node name="Prog115b" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6gup2")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 53.0
offset_top = 469.0
offset_right = 327.0
offset_bottom = 607.0
text = "Show"

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 433.0
offset_top = 471.0
offset_right = 707.0
offset_bottom = 609.0
text = "Clear"

[node name="Button3" type="Button" parent="."]
layout_mode = 0
offset_left = 791.0
offset_top = 467.0
offset_right = 1065.0
offset_bottom = 605.0
text = "Exit"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 200.0
offset_top = 34.0
offset_right = 955.0
offset_bottom = 387.0

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
